# hillclimbing-BIRD

./: .gitignore  README.md  modal_app.py  pyproject.toml
scripts/: deploy_adapter.sh  modal_deploy_adapter.py  modal_self_consistency_sweep.py  modal_tinker_run.py  modal_tinker_sweep.py  plz_download.py  visualize_self_consistency_sweep.py
src/bird_scaffold/: __main__.py  cli.py  data_dictionary.py  dataset.py  db.py  execution.py  llm_client.py  openai_client.py  prompting.py  query_tool.py  runner.py  sql_parsing.py  tinker_grpo.py  types.py
src/bird_scaffold/strategies/: __init__.py  base.py  gold_oracle.py  single_shot.py
