[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-scaffold"
version = "0.1.0"
description = "Local-first scaffold for BIRD text-to-SQL experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "langfuse>=2.0.0",
]

[project.optional-dependencies]
modal = [
  "modal>=0.67.0",
]
rl = [
  "chz>=0.4.0",
  "tinker>=0.6.1",
  "tinker_cookbook>=0.1.0",
  "wandb>=0.17.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
bird-scaffold = "bird_scaffold.cli:main"

[tool.uv.sources]
tinker_cookbook = { path = "tinker-cookbook", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
